# PawnIO

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  PawnIO.sln  README.md  cab.ddf  gencab.bat
PawnIO/: .clang-format  CMakeLists.txt  PawnIO.filters  PawnIO.inf  PawnIO.inf.in  PawnIO.rc  PawnIO.vcxproj  amx_loader.h  arch_detect.h  callbacks.cpp  callbacks.h  driver.cpp  ioctl.h  kallocator.h  klist.h  msrmrs.cpp  natives_impl.h  natives_impl_windows.cpp  public.h  signature.cpp  signature.h  stdafx.cpp  stdafx.h  uninitialized_storage.h  version.h  vm.cpp  vm.h  x64.asm
PawnIO/include/: pawnio_km.h  pawnio_um.h
PawnIO/src/: amx_loader.h  arch_detect.h  callbacks.cpp  callbacks.h  driver.cpp  kallocator.h  klist.h  msrmrs.cpp  natives_impl.h  natives_impl_windows.cpp  resource.rc  signature.cpp  signature.h  stdafx.h  uninitialized_storage.h  vm.cpp  vm.h  x64.asm
PawnIOLib/: PawnIOLib.cpp  resource.rc
PawnIOLib/include/: PawnIOLib.h
PawnIOUtil/: PawnIOUtil.cpp  resource.rc  signature.cpp
cmake/: FindWdk.cmake
pawn/: test.p
pawn/include/: core.inc  extra.inc  native.inc  ntstatus.inc  pawnio.inc  util.inc
